crates/ruff_linter/src/rules/flake8_logging_format/snapshots/ruff_linter__rules__flake8_logging_format__tests__G003.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging_format/mod.rs
---
G003 Logging statement uses `+`
 --> G003.py:3:14
  |
1 | import logging
2 |
3 | logging.info("Hello" + " " + "World!")
  |              ^^^^^^^^^^^^^^^^^^^^^^^^
4 | logging.log(logging.INFO, "Hello" + " " + "World!")

G003 Logging statement uses `+`
 --> G003.py:4:27
  |
3 | logging.info("Hello" + " " + "World!")
4 | logging.log(logging.INFO, "Hello" + " " + "World!")
  |                           ^^^^^^^^^^^^^^^^^^^^^^^^
5 |
6 | from logging import info, log

G003 Logging statement uses `+`
 --> G003.py:8:6
6 | from logging import info, log
7 |
8 | info("Hello" + " " + "World!")
  |      ^^^^^^^^^^^^^^^^^^^^^^^^
9 | log(logging.INFO, "Hello" + " " + "World!")

G003 Logging statement uses `+`
 --> G003.py:9:19
  |
8 | info("Hello" + " " + "World!")
9 | log(logging.INFO, "Hello" + " " + "World!")
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^
